<resources>
    <string name="app_name">Android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tablet">TabletActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="outer_menu">Outer Menu</string>
    <string name="sub_one">Sub-One</string>
    <string name="sub_two">Sub-Two</string>
    <string name="various_layouts">Various Layouts</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="basic_form">Basic Form</string>
    <string name="recycler_view">Recycler View</string>
    <string name="fragment_activity">Fragment Activity</string>
    <string name="toolbar_activity">ToolBar Activity</string>
    <string name="file_activity">File Activity</string>
    <string name="shared_pre_activity">Shared Preferences</string>
    <string name="registration_form">Registration Form</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="add">ADD</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="user_profile">User Profile</string>

</resources>
