<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/formStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_form"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name" />

    <EditText
        android:id="@+id/edEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email" />

    <EditText
        android:id="@+id/edPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_number" />


    <Button
        android:id="@+id/btnAdd"
        style="@style/formStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

</LinearLayout>